--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,84 @@ body {
 
 a {
   color: #00B7FF;
+  text-decoration: none;
+}
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+body main{
+  flex: 1 1 auto
+}
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav li {
+  margin: 0 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+}
+.general-container{
+  display: flex;
+  height: 100%;
+  flex: 1 1 auto;
+}
+main h1{
+  text-align: center;
+}
+.bar-links-container{
+  display:flex;
+  flex-direction: column;
+  min-width: 15%;
+  border: 1px red solid;
+  justify-content: space-around;
+  text-align: center;
+}
+.display-content-container{
+  padding: 10px;
+  flex: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.links-container{
+  display: flex;
+  flex-direction: column;
+  min-height: 30%;
+  justify-content: space-around;
 }
