--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,7 @@ footer {
   display: flex;
   height: 100%;
   flex: 1 1 auto;
+  max-width: 100%;
 }
 main h1{
   text-align: center;
@@ -75,14 +76,27 @@ main h1{
   text-align: center;
 }
 .display-content-container{
+  flex:1;
+  padding: 20px;
+}
+.display-categories-container{
   padding: 10px;
-  flex: auto;
+  flex: 1 1 auto;
   display: flex;
   flex-wrap: wrap;
+  min-width: 30%;
+  align-items: flex-start;
 }
 .links-container{
   display: flex;
   flex-direction: column;
   min-height: 30%;
   justify-content: space-around;
+  align-content: start;
+}
+.category-container{
+  border: 1px solid red;
+  text-align: center;
+  width: 30%;
+  word-wrap: break-word;
 }
