--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -9,13 +9,13 @@ block content
           div
             a(href="/inventory/category/categories") Show categories
           div
-            a(href="/inventory/category/createCategory") Create Category
+            a(href="/inventory/category/create") Create Category
         div(class="links-container")
           h3 Items
           div
             a(href="/inventory/item/items") Show items
           div
-            a(href="/inventory/item/createItem") Create item
+            a(href="/inventory/item/create") Create item
     div(class="display-content-container")
       block display-content
 
