--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,3 +100,9 @@ main h1{
   width: 30%;
   word-wrap: break-word;
 }
+.form-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+}
