--- a/views/category_detail.pug
+++ b/views/category_detail.pug
@@ -3,3 +3,7 @@ block display-content
     div(class="category_detail_container")
         h3=category.name 
         h4=category.description
+        p
+            a(href=category.url+'/delete') Delete category
+        p
+            a(href=category.url+'/update') Update category
