--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -8,9 +8,9 @@ block display-content
             label(for='name') Name:
             input#name.form-control(type='text' placeholder='category name' name='name' required='true' value=(undefined===category ? '' : category.name) )
             label(for='description') Description:
-            input#description.form-control(type='text' placeholder='description' name='description' required='true' value=(undefined===category ? '' : category.description))
+            input#description.form-control(type='text' placeholder='description' name='description' required="true"  value=(undefined===category ? '' : category.description))
             button.btn.btn-primary(type='submit') Submit
     if errors
         ul
         for error in errors
-            li!= error.msgc
+            li!= error.msg
