Added item get details controller, and views related

--- a/views/items.pug
+++ b/views/items.pug
@@ -2,6 +2,6 @@ extends inventory
 block display-content
     if items.length > 0
         each item in items
-            div= item.name
+            a(href=item.url)= item.name
     else
         p There's not items to show! Sorry maybe it's empty the database
