--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -3,12 +3,15 @@ extends inventory
 block display-content
     h1=title
 
-    form(method='POST' action='')
+    form(method='POST' action='' enctype="multipart/form-data")
         div.form-group
             label(for='name') Name:
             input#name.form-control(type='text' placeholder='category name' name='name' required='true' value=(undefined===category ? '' : category.name) )
             label(for='description') Description:
             input#description.form-control(type='text' placeholder='description' name='description' required="true"  value=(undefined===category ? '' : category.description))
+            label(for='file') Upload an image:
+            input(type="file" name="image") 
+
             button.btn.btn-primary(type='submit') Submit
     if errors
         ul
