--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -3,7 +3,7 @@ extends inventory
 block display-content
     h1=title
 
-    form(method='POST' action='')
+    form(method='POST' action='' enctype="multipart/form-data")
         div.form-group
             label(for='name') Name:
             input#name.form-control(type='text' placeholder='item name' name='name' required='true' value=(undefined===item ? '' : item.name) )
@@ -21,6 +21,8 @@ block display-content
             input#price.form-control(type='text' placeholder='price' name='price' required="true"  value=(undefined===item ? '' : item.price))
             label(for='stock') Stock:
             input#stock.form-control(type='text' placeholder='stock' name='stock' required="true"  value=(undefined===item ? '' : item.number_in_stock))
+            label(for='file') Upload an image:
+            input(type="file" name="image") 
             button.btn.btn-primary(type='submit') Submit
     if errors
         ul
